tests/src/frontend/syntax/invalid/lvalue_in_comment.sk
fun main(): String {
  // comment
  x.!y
}
